# raya

./: .codex_strict_eval_probe.js  .dockerignore  .editorconfig  .gitignore  1  ASYNC_PREEMPTION.md  CLAUDE.md  Cargo.toml  Dockerfile.ci  IMPLEMENTATION_STATUS.md  LICENSE  Makefile  OPTIONAL_PARAMS_COMPLETE.md  README.md  TEST262_KEEP_NOTES.md  rustfmt.toml  scratch_agg_cause_debug.js  server.ready  test_failures_2026_03_21.md  tmp_comment_perf.js  tmp_eval_repro.js  tmp_inspect_error.js  tmp_proxy_probe.js  tmp_typedarray_debug.js  wrangler.toml
crates/raya-builtins/: Cargo.toml  build.rs
crates/raya-builtins/builtins/: Buffer.raya  Channel.raya  Date.raya  Error.raya  Map.raya  Mutex.raya  Object.raya  Set.raya  Task.raya
crates/raya-builtins/src/: lib.rs
crates/raya-bytecode/: Cargo.toml
crates/raya-bytecode/benches/: bytecode_encoding.rs
crates/raya-bytecode/src/: constants.rs  encoder.rs  lib.rs  module.rs  opcode.rs  verify.rs
crates/raya-bytecode/tests/: bytecode_integration.rs
crates/raya-checker/: Cargo.toml
crates/raya-checker/src/: binder.rs  checker.rs  diagnostic.rs  error.rs  exhaustiveness.rs  lib.rs  narrowing.rs  symbols.rs  type_guards.rs
crates/raya-checker/tests/: bare_union_typeof_test.rs  block_scope_test.rs  diagnostic_output_test.rs  exhaustiveness_test.rs  narrowing_test.rs
crates/raya-cli/: CLAUDE.md  Cargo.toml
crates/raya-cli/scripts/: dap-adapter.raya  debugger.raya
crates/raya-cli/src/: main.rs  output.rs
crates/raya-cli/tests/: cli_integration.rs
crates/raya-compiler/: Cargo.toml
crates/raya-compiler/src/: codegen.rs  codegen_ast.rs  error.rs  lib.rs  module_builder.rs  native_id.rs
crates/raya-compiler/tests/: basic_codegen.rs  codegen_tests.rs  e2e_tests.rs  ir_comprehensive.rs  ir_demo.rs  monomorphize_tests.rs
crates/raya-core/: Cargo.toml
crates/raya-core/src/: builtin.rs  lib.rs  object.rs  scheduler.rs  stack.rs  sync.rs  value.rs
crates/raya-core/tests/: closure_tests.rs  concurrency_integration.rs  concurrent_task_tests.rs  context_isolation_tests.rs  exception_handling_basic.rs  gc_integration_tests.rs  gc_stress_tests.rs  import_resolution.rs  inner_vm_integration.rs  interpreter_integration.rs  json_integration.rs  module_linking.rs  module_loading.rs  object_model_tests.rs  opcode_tests.rs  safepoint_integration.rs  scheduler_integration.rs  snapshot_integration.rs  snapshot_restore_validation.rs  stack_integration.rs  vm_context_integration.rs
crates/raya-engine/: CLAUDE.md  Cargo.toml  build.rs
crates/raya-engine/builtins/: Array.raya  Buffer.raya  Channel.raya  RegExpMatch.raya  Set.raya  array.d.raya  array.raya  buffer.d.raya  buffer.raya  channel.d.raya  channel.raya  dataview.d.raya  dataview.raya  error.d.raya  error.raya  map.d.raya  map.raya  mutex.d.raya  mutex.raya  number.d.raya  number.raya  object.d.raya  object.node_compat.d.raya  object.node_compat.raya  object.raya  promise.d.raya  promise.raya  regexp.d.raya  regexp.raya  regexpmatch.raya  set.d.raya  set.raya  string.d.raya  string.raya  task.d.raya  task.raya  typedarray.d.raya  typedarray.raya
crates/raya-engine/examples/: inspect_builtin_exports.rs  jit_bench.rs
crates/raya-engine/src/: aot_profile.rs  lib.rs  semantics.rs
crates/raya-engine/tests/: aot_integration.rs  ast_tests.rs  async_call_tests.rs  basic_codegen.rs  closure_tests.rs  codegen_tests.rs  concurrency_integration.rs  concurrent_task_tests.rs  context_isolation_tests.rs  decorator_test.rs  engine.rs  exception_handling_basic.rs  expression_tests.rs  gc_integration_tests.rs  gc_stress_tests.rs  hardening_test.rs  import_resolution.rs  inner_vm_integration.rs  interpreter_integration.rs  ir_comprehensive.rs  ir_demo.rs  jit_integration.rs  json_integration.rs  jsx_lowering_tests.rs  jsx_tests.rs  milestone_2_9_test.rs  module_linking.rs  module_loading.rs  monomorphize_tests.rs  object_model_tests.rs  opcode_tests.rs  pattern_tests.rs  reflect_phase8_tests.rs  reg_interpreter_tests.rs  rest_pattern_test.rs  safepoint_integration.rs  scheduler_integration.rs  snapshot_jit.rs  snapshot_restore_validation.rs  statement_tests.rs  (+6 more)
crates/raya-es262-conformance/: Cargo.toml
crates/raya-es262-conformance/src/: lib.rs  main.rs
crates/raya-examples/: CLAUDE.md  Cargo.toml
crates/raya-examples/src/: lib.rs
crates/raya-examples/tests/: cli_http_e2e.rs  cli_second_suite_e2e.rs  fixture_fault_injection_e2e.rs  fixture_pkg_workflow_e2e.rs  fixture_tcp_chat_e2e.rs  fixture_template_pipeline_e2e.rs  fixture_todo_kv_e2e.rs  fixture_worker_queue_e2e.rs  integration.rs
crates/raya-ffi/: Cargo.toml  README.md
crates/raya-ffi/examples/: Makefile  crypto.cpp  fs.cpp  hello.c  loader_test.rs  proc_macro_test.rs
crates/raya-ffi/include/: raya.h
crates/raya-ffi/src/: lib.rs  loader.rs
crates/raya-lsp/: CLAUDE.md  Cargo.toml
crates/raya-lsp/src/: lib.rs
crates/raya-native/: CLAUDE.md  Cargo.toml
crates/raya-native/src/: function.rs  lib.rs  module.rs  traits.rs
crates/raya-parser/: Cargo.toml  README.md
crates/raya-parser/benches/: lexer.rs
crates/raya-parser/src/: ast.rs  interner.rs  lexer.rs  lib.rs  parser.rs  token.rs
crates/raya-parser/tests/: ast_tests.rs  async_call_tests.rs  decorator_test.rs  expression_tests.rs  hardening_test.rs  jsx_tests.rs  milestone_2_9_test.rs  pattern_tests.rs  rest_pattern_test.rs  statement_tests.rs  template_test.rs  tokens.rs  type_tests.rs  visibility_test.rs  visitor_tests.rs
crates/raya-pm/: CLAUDE.md  Cargo.toml  ERROR_HANDLING.md
crates/raya-pm/src/: lib.rs  lockfile.rs  main.rs  manifest.rs  path.rs  resolver.rs  semver.rs
crates/raya-pm/tests/: cache.rs  end_to_end_tests.rs  (+6 more)
crates/raya-runtime/: 1  CLAUDE.md  Cargo.toml  __raya_inline_entry.__raya_inline_50082_1772708466138002000_0.raya  __raya_inline_entry.__raya_inline_52386_1772708690520266000_0.raya  build.rs
crates/raya-sdk/: CLAUDE.md  Cargo.toml
crates/raya-stdlib/: CLAUDE.md  Cargo.toml  Logger.raya  Math.raya  README.md  json.d.raya  reflect.d.raya
crates/raya-stdlib-posix/: CLAUDE.md  Cargo.toml
crates/raya-types/: Cargo.toml
(+1158 files in other folders)
