[workspace]
resolver = "2"
members = [
    "crates/raya-engine",
    "crates/raya-sdk",
    "crates/raya-stdlib",
    "crates/raya-cli",
    "crates/raya-lsp",
    "crates/raya-pm",
    "crates/raya-native",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Raya Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rayalang/rayavm"
rust-version = "1.70"

[workspace.dependencies]
# CLI and argument parsing
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Lexer generation
logos = "0.13"

# Concurrency primitives
crossbeam = "0.8"
crossbeam-deque = "0.8"
parking_lot = "0.12"
dashmap = "5.5"
num_cpus = "1.16"
rand = "0.8"

# Hashing
rustc-hash = "1.1"
sha2 = "0.10"

# Regex
regex = "1.10"

# Allocator
mimalloc = { version = "0.1", default-features = false }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Lazy statics
once_cell = "1.19"

# Testing
criterion = "0.5"

# LSP
tower-lsp = "0.20"
tokio = { version = "1.35", features = ["full"] }

# Common internal dependencies
raya-engine = { path = "crates/raya-engine" }
raya-sdk = { path = "crates/raya-sdk" }
raya-stdlib = { path = "crates/raya-stdlib" }
raya-native = { path = "crates/raya-native" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.bench]
inherits = "release"
