[workspace]
resolver = "2"
members = [
    "crates/raya-engine",
    "crates/raya-sdk",
    "crates/raya-stdlib",
    "crates/raya-stdlib-posix",
    "crates/raya-runtime",
    "crates/raya-cli",
    "crates/raya-lsp",
    "crates/raya-pm",
    "crates/raya-native",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Raya Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rayalang/rayavm"
rust-version = "1.90"

[workspace.dependencies]
# CLI and argument parsing
clap = { version = "4.4", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Lexer generation
logos = "0.13"

# Concurrency primitives
crossbeam = "0.8"
crossbeam-deque = "0.8"
parking_lot = "0.12"
dashmap = "5.5"
num_cpus = "1.16"
rand = "0.8"

# Hashing
rustc-hash = "1.1"
sha2 = "0.10"

# Crypto
aes-gcm = "0.10"
ed25519-dalek = { version = "2", features = ["pkcs8", "pem", "rand_core"] }
hkdf = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }

# Regex
regex = "1.10"

# Compression
flate2 = "1"

# URL parsing
url = "2"

# Allocator
mimalloc = { version = "0.1", default-features = false }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Lazy statics
once_cell = "1.19"

# Testing
criterion = "0.5"

# LSP
tower-lsp = "0.20"
tokio = { version = "1.35", features = ["full"] }

# Common internal dependencies
raya-engine = { path = "crates/raya-engine" }
raya-sdk = { path = "crates/raya-sdk" }
raya-stdlib = { path = "crates/raya-stdlib" }
raya-runtime = { path = "crates/raya-runtime" }
raya-stdlib-posix = { path = "crates/raya-stdlib-posix" }
raya-native = { path = "crates/raya-native" }
libc = "0.2"

# WebSocket
tungstenite = "0.24"

# TLS
rustls = "0.23"
webpki-roots = "0.26"
rustls-pemfile = "2"

# Encoding
csv = "1"
quick-xml = "0.37"
data-encoding = "2"
toml = "0.8"

# Archive
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }

# Glob
glob = "0.3"

# File watching
notify = "7"

# Semver
semver = "1"

# JIT compilation (Cranelift)
cranelift-codegen = "0.128"
cranelift-frontend = "0.128"
cranelift-module = "0.128"
cranelift-jit = "0.128"
cranelift-native = "0.128"
cranelift-object = "0.128"
target-lexicon = "0.13"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
panic = "abort"

[profile.bench]
inherits = "release"
