[package]
name = "raya-builtins"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Precompiled builtin types for Raya language"

[dependencies]
# We depend on bytecode module for deserialization at runtime
raya-compiler = { path = "../raya-compiler" }
# For converting signatures to checker format
raya-parser = { path = "../raya-parser" }

[build-dependencies]
# Build-time dependencies for compiling builtins
raya-parser = { path = "../raya-parser" }
raya-compiler = { path = "../raya-compiler" }
