[package]
name = "raya-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
raya-types = { path = "../raya-types" }
raya-parser = { path = "../raya-parser" }
rustc-hash = "2.0"
thiserror = "2.0"
codespan-reporting = "0.11"
termcolor = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
raya-parser = { path = "../raya-parser" }
