[package]
name = "raya-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Unified CLI tool for Raya"

[[bin]]
name = "raya"
path = "src/main.rs"

[dependencies]
raya-engine = { workspace = true }
raya-runtime = { workspace = true }
raya-pm = { path = "../raya-pm" }
clap = { workspace = true }
anyhow = { workspace = true }
toml = "0.8"
dirs = "5"
