[package]
name = "raya-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Unified CLI tool for Raya"

[[bin]]
name = "raya"
path = "src/main.rs"

[features]
default = ["jit", "aot"]
jit = ["raya-engine/jit"]
aot = ["raya-engine/aot"]

[dependencies]
raya-engine = { workspace = true }
raya-runtime = { workspace = true }
raya-pm = { path = "../raya-pm" }
clap = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
dirs = "5"
rustyline = "15"
termcolor = "1.4"
glob = "0.3"
num_cpus = "1"
