[package]
name = "raya-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
raya-bytecode = { path = "../raya-bytecode" }
raya-parser = { path = "../raya-parser" }
raya-types = { path = "../raya-types" }
rustc-hash = "2.0"
thiserror = "2.0"

[dev-dependencies]
raya-parser = { path = "../raya-parser" }
raya-bytecode = { path = "../raya-bytecode" }
raya-types = { path = "../raya-types" }
