[package]
name = "raya-compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
raya-parser = { path = "../raya-parser" }
rustc-hash = "2.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
crc32fast = "1.3"

[dev-dependencies]
raya-parser = { path = "../raya-parser" }
