[package]
name = "raya-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Core runtime for the Raya VM (interpreter, GC, scheduler)"

[dependencies]
raya-compiler = { workspace = true }
crossbeam = { workspace = true }
crossbeam-deque = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
rustc-hash = { workspace = true }
thiserror = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
once_cell = { workspace = true }
hex = "0.4"

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3.8"

[[bench]]
name = "vm_execution"
harness = false
