[package]
name = "raya-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Raya language engine: parser, compiler, and VM runtime"

[dependencies]
# Lexer
logos = "0.14"
unicode-xid = "0.2"

# Data structures and hashing
rustc-hash = "2.0"

# Error handling
thiserror = "2.0"

# SDK types for FFI
raya-sdk = { workspace = true }

# Package management (for module resolution)
raya-pm = { package = "rpkg", path = "../raya-pm" }

# Home directory (for cache path)
dirs = "5.0"

# Diagnostics
codespan-reporting = "0.11"
termcolor = "1.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing for bytecode and crypto
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
hmac = "0.12"
crc32fast = "1.3"
hex = "0.4"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
subtle = "2.5"

# Binary codecs (for std:codec)
rmp-serde = "1.3"
ciborium = "0.2"

# Path utilities (for std:path)
pathdiff = "0.2"

# Concurrency (for VM scheduler)
crossbeam = { workspace = true }
crossbeam-deque = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true }

# Regex (for VM)
regex = { workspace = true }

# Lazy initialization
once_cell = { workspace = true }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3.8"
raya-runtime = { workspace = true }
