[package]
name = "raya-engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Raya language engine: parser, compiler, and VM runtime"

[dependencies]
# Lexer
logos = "0.14"
unicode-xid = "0.2"

# Data structures and hashing
rustc-hash = "2.0"

# Error handling
thiserror = "2.0"

# SDK types for FFI
raya-sdk = { workspace = true }

# Package management (for module resolution)
raya-pm = { path = "../raya-pm" }

# Home directory (for cache path)
dirs = "5.0"

# Diagnostics
codespan-reporting = "0.11"
termcolor = "1.4"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Hashing for bytecode checksums
sha2 = "0.10"
crc32fast = "1.3"
hex = "0.4"

# Concurrency (for VM scheduler)
crossbeam = { workspace = true }
crossbeam-deque = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
num_cpus = { workspace = true }
rand = { workspace = true }

# Regex (for VM)
regex = { workspace = true }

# Lazy initialization
once_cell = { workspace = true }

# JIT compilation (optional, behind "jit" feature)
cranelift-codegen = { workspace = true, optional = true }
cranelift-frontend = { workspace = true, optional = true }
cranelift-module = { workspace = true, optional = true }
cranelift-jit = { workspace = true, optional = true }
cranelift-native = { workspace = true, optional = true }
cranelift-object = { workspace = true, optional = true }
target-lexicon = { workspace = true, optional = true }

[features]
jit = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-module",
    "dep:cranelift-jit",
    "dep:cranelift-native",
    "dep:target-lexicon",
]
aot = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-module",
    "dep:cranelift-object",
    "dep:cranelift-native",
    "dep:target-lexicon",
]

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
criterion = { workspace = true }
tempfile = "3.8"
raya-runtime = { workspace = true }
