[package]
name = "raya-lsp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Language Server Protocol implementation for Raya"

[dependencies]
raya-parser = { workspace = true }
raya-types = { workspace = true }
tower-lsp = { workspace = true }
tokio = { workspace = true }
