[package]
name = "raya-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Lexer and parser for the Raya programming language"

[dependencies]
logos = "0.14"              # Lexer generator
unicode-xid = "0.2"         # Unicode identifier support
rustc-hash = "2.0"          # Fast hashing for interner
thiserror = "2.0"           # Error handling (for types & checker)
codespan-reporting = "0.11" # Diagnostic reporting
termcolor = "1.4"           # Terminal color output
serde = { version = "1.0", features = ["derive"] }  # Serialization
serde_json = "1.0"          # JSON support

[dev-dependencies]
criterion = "0.5"           # Benchmarking

[[bench]]
name = "lexer"
harness = false
