[package]
name = "raya-pm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Package manager data types and utilities for Raya"

[lib]
name = "raya_pm"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
dirs = "5.0"
hex = "0.4"

[dev-dependencies]
tempfile = "3.8"
