[package]
name = "raya-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Raya runtime that binds the engine with standard library"

[lib]
doctest = false

[features]
default = ["jit", "aot"]
jit = ["raya-engine/jit"]
aot = ["raya-engine/aot"]

[dependencies]
raya-engine = { workspace = true }
raya-stdlib = { path = "../raya-stdlib" }
raya-stdlib-posix = { path = "../raya-stdlib-posix" }
raya-pm = { path = "../raya-pm" }
thiserror = { workspace = true }
num_cpus = { workspace = true }
dirs = "5"
crc32fast = "1.3"

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
