[package]
name = "raya-stdlib-posix"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "POSIX standard library for Raya (fs, net, http, fetch, env, process, os, io)"

[dependencies]
raya-sdk = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
libc = { workspace = true }
