[package]
name = "raya-stdlib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Standard library native implementations for Raya"

[dependencies]
rand = "0.8"
raya-engine = { workspace = true }
