[package]
name = "raya-stdlib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Standard library native implementations for Raya"

[dependencies]
rand = "0.8"
raya-engine = { workspace = true }
parking_lot = { workspace = true }

# Crypto dependencies
sha2 = "0.10"
sha1 = "0.10"
md5 = "0.7"
hmac = "0.12"
hex = "0.4"
base64 = "0.21"
subtle = "2.5"
uuid = { version = "1.6", features = ["v4"] }

# Path dependencies
pathdiff = "0.2"
