[package]
name = "raya-stdlib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Standard library native implementations for Raya"

[dependencies]
rand = "0.8"
raya-sdk = { workspace = true }
parking_lot = { workspace = true }

# Crypto dependencies
sha2 = "0.10"
sha1 = "0.10"
md5 = "0.7"
hmac = "0.12"
hex = "0.4"
base64 = "0.21"
subtle = "2.5"
uuid = { version = "1.6", features = ["v4"] }
aes-gcm = { workspace = true }
ed25519-dalek = { workspace = true }
hkdf = { workspace = true }
pbkdf2 = { workspace = true }

# Path dependencies
pathdiff = "0.2"

# Compression
flate2 = { workspace = true }

# URL parsing
url = { workspace = true }
percent-encoding = "2"

# Encoding (CSV, XML, Base32, JSON, TOML)
csv = { workspace = true }
quick-xml = { workspace = true }
data-encoding = { workspace = true }
toml = { workspace = true }

# Semver
semver = { workspace = true }

# Serialization (for template module)
serde_json = { workspace = true }

[dev-dependencies]
raya-engine = { workspace = true }
