[package]
name = "raya-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Type system and type checker for Raya"

[dependencies]
thiserror = { workspace = true }
rustc-hash = { workspace = true }
